Adding open api to analytics service
